[package]
name = "realhydroper-path"
version = "1.2.1"
edition = "2021"
authors = ["realhydroper <hydroperfox@gmail.com>"]
repository = "https://github.com/realhydroper/rustpath"
license = "ISC"
description = "Work with flexible file paths"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy-regex = "3.0.0"
