[package]
name = "fairyvoid-path"
version = "1.0.0"
edition = "2021"
authors = ["fairyvoid <fairepoint@gmail.com>"]
repository = "https://github.com/fairyvoid/path.rs"
license = "ISC"
description = "Work with flexible file paths"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy-regex = "3.0.0"
