[package]
name = "hydroperx-path"
version = "1.0.0"
edition = "2021"
authors = ["hydroperx <hydroperfox@gmail.com>"]
repository = "https://github.com/hydroperx/path.rs"
license = "ISC"
description = "Work with flexible file paths"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy-regex = "3.0.0"
